--- a/src/index.css
+++ b/src/index.css
@@ -306,10 +306,25 @@ a {
 }
 
 @media screen and (max-width: 1200px) {
-  .container {
-    width: 90%;
-  }
   body {
     background-color: darkgrey;
   }
+
+  .container {
+    width: 90%;
+  }
 }
+
+@media screen and (max-width: 1100px) {
+  body {
+    background-color: bisque;
+  }
+
+  .big-title-xl {
+    font-size: 6rem;
+  }
+
+  .big-title-m {
+    font-size: 4rem;
+  }
+} 
