--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -46,28 +46,26 @@
     margin-top: 100px;
 }
 
-@media screen and (max-width: 1500px) {
-    body {
-        background-color: darksalmon;
-    }
-
+@media screen and (max-width: 1500px) {  
     .first-home-wrapper .home-wrapper {
         margin: 0;
     }
 }
 
 @media screen and (max-width: 1350px) {
-    body {
-        background-color: azure;
-    }
-
     .first-home-wrapper .big-home-photo {
         margin: 0;
     }
 }
 
 @media screen and (max-width: 1200px) {
-    body {
-        background-color: darkgrey;
+    .container {
+      width: 90%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .first-home-wrapper .big-home-photo img {
+        max-height: 200px;
     }
 }
