--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  min-width: 700px;
 }
 
 #root {
@@ -327,4 +328,14 @@ a {
   .big-title-m {
     font-size: 4rem;
   }
-} 
+}
+
+@media screen and (max-width: 900px) {
+  body {
+    background-color: #FFFFFF;
+  }
+
+  .first-home-wrapper .big-home-photo img {
+      max-height: 200px;
+  }
+}
