--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  min-width: 600px;
   width: 100%;
 }
 
 #root {
+  width: 100%;
 }
 
 body::after {
