--- a/src/index.css
+++ b/src/index.css
@@ -344,3 +344,13 @@ a {
     max-width: 80%;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .big-title-xl {
+    font-size: 5rem;
+  }
+
+  .big-title-m {
+    font-size: 3.5rem;
+  }
+}
