--- a/src/views/about/About.css
+++ b/src/views/about/About.css
@@ -49,7 +49,8 @@
 }
 
 .about-spec-elem .about-spec-img img {
-    height: 100%;
+    width: 200px;
+    height: 200px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -127,3 +128,37 @@
     padding-left: calc(5% + 70px);
 }
 
+@media screen and (max-width: 1100px) {
+    .about-spec-elem .about-spec-text {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .about-spec-grid {
+        height: 200px;
+    }
+    
+    .about-spec-elem .about-spec-img img {
+        height: 100px;
+        width: 100px;
+    }
+    
+    .about-spec-elem .about-spec-img {
+        height: 100px;
+    }
+
+    .about-spec-elem:hover .about-spec-img {
+        top: 60%;
+    }
+
+    .about-tech-wrapper .about-tech-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .about-tech-wrapper .about-tech-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
