--- a/src/views/portfolio/Portfolio.css
+++ b/src/views/portfolio/Portfolio.css
@@ -44,3 +44,15 @@
   /* width: 40px;
   height: 40px; */
 }
+
+@media screen and (max-width: 1550px) {
+  .project-grid .project-grid-elem {
+      grid-template-columns: 0.2fr 1.5fr 1fr 0.5fr;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .project-grid .project-grid-elem {
+      grid-template-columns: 0.2fr 1fr 1fr 1fr;
+  }
+}
