--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -309,8 +309,15 @@
     }
     .header-nav-centered .left-nav {
         position: relative;
-        left: 50%;
-        transform: translateX(-50%);
         top: 10%;
+        float: none;
+        text-align: center;
+        max-width: 100%
+    }
+    .header-nav-centered .left-nav .left-nav-ul li a:hover {
+        margin-left: 0;
+    }
+    .left-nav::after {
+        content: none;
     }
 }
